--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+2.4.1
+* Made IP preload IPs
+* decrement warnings every 5 mins
+* changed log stuff
+* changed startsWith("are you") to conatains(etc.) in AI
+
 2.4.0
 + added MasterBot as template class
 + changed Sad_Bot to extend MasterBot class
