--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 2.4.1
 + added raffle command
++ added permit command
 * made bot check existing users and add them to userlist
 * Made IP preload IPs
 * decrement warnings every 5 mins
